--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.10.4 — MoskoGás</title>
+<title>Config v2.10.5 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.10.4 — config</div>
-  <h1>⚙️ Configurações v2.10.4</h1>
+  <div class="version-badge">v2.10.5 — config</div>
+  <h1>⚙️ Configurações v2.10.5</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -187,7 +187,7 @@
   <!-- Lembretes PIX (admin only) -->
   <div class="card" id="lembreteSection">
     <h2>📱 Lembretes PIX (WhatsApp)</h2>
-    <p style="font-size:12px;color:#94a3b8;margin-bottom:12px">Configuração de lembretes automáticos para PIX a receber pendentes.</p>
+    <p style="font-size:12px;color:#94a3b8;margin-bottom:12px">Configuração de lembretes automáticos para PIX Aberto pendentes.</p>
     <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
       <label style="display:flex;align-items:center;gap:8px">
         <input type="checkbox" id="lemb-ativo" style="width:18px;height:18px">
