--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.11.3</title>
+<title>Novo Pedido — MoskoGás v2.11.4</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -49,9 +49,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.3 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.4 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.3</span></h1>
+  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.4</span></h1>
 
   <div class="two-col">
   <!-- ═══ COLUNA ESQUERDA: CLIENTE ═══ -->
@@ -182,7 +182,7 @@
     <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:4px;margin-top:6px" id="pgto-grid">
       <button type="button" class="tipo-pgto-btn" data-tipo="dinheiro"     data-key="dinheiro" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">💵 Dinheiro</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="pix_vista"    data-key="pix" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">⚡ PIX à vista</button>
-      <button type="button" class="tipo-pgto-btn" data-tipo="pix_receber"  data-key="pix_aguardando" onclick="selTipoPgto(this)" title="Cria venda no Bling — aguarda confirmação de PIX">⏳ PIX a receber</button>
+      <button type="button" class="tipo-pgto-btn" data-tipo="pix_receber"  data-key="pix_aguardando" onclick="selTipoPgto(this)" title="Cria venda no Bling — aguarda confirmação de PIX">⏳ PIX Aberto</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="debito"       data-key="debito" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">💳 Débito</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="credito"      data-key="credito" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">💳 Crédito</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="mensalista"   data-key="fiado" onclick="selTipoPgto(this)" title="Não cria venda — aparece em Pagamentos">📅 Mensalista</button>
@@ -1068,7 +1068,7 @@ async function saveOrder() {
     const msgs = {
       dinheiro: 'pago e no Bling ✅',
       pix_vista: 'PIX à vista',
-      pix_receber: 'PIX a receber ⏳',
+      pix_receber: 'PIX Aberto ⏳',
       debito: 'Débito',
       credito: 'Crédito',
       mensalista: 'Mensalista 📋',
@@ -1079,7 +1079,7 @@ async function saveOrder() {
     
     hideLoading();
     toast(`✅ Pedido #${result.id} salvo — ${statusMsg}. Bling ao entregar.`);
-    // v2.11.3: Não redireciona — limpa form para novo pedido
+    // v2.11.4: Não redireciona — limpa form para novo pedido
     setTimeout(() => {
       // Limpar cliente
       ['cName','cPhone','cAddr','cBairro','cComp','cRef'].forEach(id => { const el = document.getElementById(id); if (el) el.value = ''; });
